Fix: add OpenCV dependency for Streamlit Cloud

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,10 @@ tensorflow>=2.14.0
 torch>=2.1.0
 torchvision>=0.16.0
 transformers>=4.35.0
-opencv-python>=4.8.1
+opencv-python-headless>=4.8.1
 numpy>=1.24.0
 scipy>=1.11.0
+
 
 # Image Processing
 Pillow>=10.1.0
